cli/tests/testdata/workers/worker_message_handler_error.ts.out
error: Uncaught (in worker "foo") Error: bar
  throw new Error("bar");
        ^
    at onmessage ([WILDCARD]/message_handler_error.ts:[WILDCARD])
    at [WILDCARD]
error: Uncaught (in promise) Error: Unhandled error in child worker.
    at Worker.#pollControl [WILDCARD]
